Try to fix overflowing text

--- a/styles.css
+++ b/styles.css
@@ -52,4 +52,5 @@ p {
     color: grey;
     text-align: center;
     flex: auto;
+    max-height: 100%;
 }
